--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,7 @@ jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/tdeado_file?useUnicode=true&characterEncoding=utf8&useSSL=false&useAffectedRows=true
 jdbc.username=tdeado_file
 jdbc.password=tdeado_file
-img.location=/upload/
-img.directory=/Users/yangzhe/apps/upload/
+img.directory=/home/upload/
 img.domain=http://file.tdeado.com/
 mybatis_config_file=mybatis-config.xml
 mapper_path=/mapper/**/**.xml
