--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=83
 server.servlet.context-path=/
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/tdeado_file?useUnicode=true&characterEncoding=utf8&useSSL=false&useAffectedRows=true
+jdbc.url=jdbc:mysql://47.106.240.64:3306/tdeado_file?useUnicode=true&characterEncoding=utf8&useSSL=false&useAffectedRows=true
 jdbc.username=tdeado_file
 jdbc.password=tdeado_file
 img.directory=/home/upload/
